# UnitTest11

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  UnitTest11.hpp  biicode.conf  build.bat  build.sh  clean.bat  configure
Scripts/: build.bat  build.sh  build_library.sh  build_tests.bat  build_tests.sh  deploy.bat  deploy.sh  run_tests.bat  run_tests.sh
Templates/DynamicLibrary/: Initialise.ps1
Templates/DynamicLibrary/PROJNAME/: CMakeLists.txt
Templates/DynamicLibrary/PROJNAME_Tests/: CMakeLists.txt
Templates/DynamicLibrary/Scripts/: build.sh  clean.bat  clean.sh  deploy.bat  deploy.sh
Templates/Executable/: CMakeLists.txt  build.bat
Templates/Executable/PROJNAME/: CMakeLists.txt
Templates/Executable/PROJNAME_Tests/: CMakeLists.txt
Templates/Qmake_Ut11_DynamicLibrary_Template/: build.bat  build.sh
Templates/Qmake_Ut11_DynamicLibrary_Template/$PROJNAME/: $PROJNAME.pro
Templates/Qmake_Ut11_DynamicLibrary_Template/Scripts/: clean.sh  run_tests.bat
Templates/Qmake_Ut11_Executable_Template/: InitialiseProject.ps1  build.bat  build.sh
Templates/Qmake_Ut11_Executable_Template/$PROJNAME/: $PROJNAME.pro
Templates/Qmake_Ut11_Executable_Template/Scripts/: build.bat  build_exe.bat  build_library.bat  build_library.sh
Templates/Qmake_Ut11_StaticLib_Template/: build.sh
Templates/Qmake_Ut11_StaticLib_Template/$PROJNAME/: $PROJNAME.pro
Templates/Qmake_Ut11_StaticLib_Template/$PROJNAME_Tests/: $PROJNAME_Tests.pro
Templates/Qmake_Ut11_StaticLib_Template/Scripts/: build.bat  build.sh
Templates/StaticLibrary/PROJNAME/: CMakeLists.txt
Templates/StaticLibrary/PROJNAME_Tests/: CMakeLists.txt
UnitTest11/: CMakeLists.txt  Category.hpp  Mock.hpp  Run.hpp  UnitTest11.pro
UnitTest11/Assert/: That.hpp
UnitTest11/Code/include/: UnitTest11.hpp
UnitTest11/Code/src/: Global.cpp  Output.cpp  StdOutput.cpp  TestFixture.cpp  TestFixtureRunner.cpp
UnitTest11/Is/: Any.hpp  Between.hpp  Empty.hpp  Null.hpp  True.hpp  Zero.hpp
UnitTest11/Is/Iterable/: EquivalentTo.hpp  Of.hpp
UnitTest11/Is/String/: Containing.hpp  EndingWith.hpp
UnitTest11/Will/: Pass.hpp  Throw.hpp
UnitTest11/detail/: DeclareFixture.hpp  MockReturnHandler.hpp  MockVerify.hpp  NotOperand.hpp  OrOperand.hpp  TestFixtureAbstract.hpp  TestStage.hpp  TestStageBuilder.hpp  TestStageImpl.hpp
UnitTest11/utility/: AreEqual.hpp  DefaultValue.hpp  ToString.hpp
UnitTest11_Tests/: CMakeLists.txt  UnitTest11_Tests.pro
UnitTest11_Tests/Code/: AssertFailTests.cpp  main.cpp
include/: UnitTest11.hpp
include/UnitTest11/: Category.hpp  Core.hpp  DeclareFixture.hpp  Global.hpp  Macros.hpp  Mock.hpp  MockTimesVerify.hpp  MockVerify.hpp  Run.hpp  StdOutput.hpp  TestFailedException.hpp  TestFixture.hpp  TestFixtureAbstract.hpp  TestFixtureResults.hpp  TestFixtureRunner.hpp
src/: CMakeLists.txt  DeclareFixture.cpp  GetRunner.cpp  GetRunner.hpp  Global.cpp  Output.cpp  Run.cpp  StdOutput.cpp  TestFixture.cpp  TestFixtureRunner.cpp  files.cmake
src/Assert/: Fail.cpp
src/Is/: Empty.cpp  False.cpp  Infinity.cpp  NaN.cpp  Null.cpp  True.cpp  Zero.cpp
src/Utility/: TestStage.cpp  TestStageBuilder.cpp  TestStageBuilderImpl.cpp  TestStageImpl.cpp
src/detail/: GetRunner.cpp  GetRunner.hpp  TestStage.cpp  TestStageBuilder.cpp  TestStageBuilderImpl.cpp  TestStageImpl.cpp
tests/: CMakeLists.txt  files.cmake  main.cpp
tests/Examples/: EntityComponentStore.cpp  EventDispatcher.cpp  Minesweeper.cpp
tests/Unit/: MockTests.cpp  TestFixtureRunnerTests.cpp  TestFixtureTests.cpp
tests/Unit/Is/: AnyTests.cpp  (+12 more)
(+222 files in other folders)
